--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
+    "tailwindcss-border-image": "^1.1.2",
     "typescript": "^5"
   }
 }
